[package]
name = "hostrada-netcsv"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
env_logger = "0.11.11"
log = "0.4.33"
netcdf = { version = "0.12", features = ["ndarray"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
num-traits = "0.2"
rayon = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.6"
thiserror = "2.0.18"
owo-colors = "4.3.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
dirs = "6.0.0"
anyhow = "1.0.103"

[profile.release]
strip = true
codegen-units = 1